y.output
   0  $accept : program $end

   1  var : IDENTIFIER
   2      | IDENTIFIER '[' CONSTANT ']'
   3      | IDENTIFIER '[' CONSTANT ']' '[' CONSTANT ']'

   4  variables : var
   5            | '*' var
   6            | variables ',' var
   7            | variables ',' '*' var

   8  type : INT
   9       | CHAR
  10       | VOID

  11  arg_var : IDENTIFIER
  12          | '*' IDENTIFIER

  13  struct_var : IDENTIFIER
  14             | IDENTIFIER '[' CONSTANT ']'
  15             | struct_var ',' IDENTIFIER
  16             | struct_var ',' IDENTIFIER '[' CONSTANT ']'

  17  inside_dec : IDENTIFIER
  18             | inside_dec ',' IDENTIFIER

  19  struct_declaration : type inside_dec ';'

  20  struct_list : struct_declaration
  21              | struct_list struct_declaration

  22  struct : STRUCT IDENTIFIER '{' struct_list '}'

  23  declaration : type variables ';'
  24              | struct ';'
  25              | STRUCT IDENTIFIER struct_var ';'
  26              | struct struct_var ';'

  27  argument_list : argument_list ',' type arg_var
  28                | type arg_var
  29                | argument_list ',' STRUCT IDENTIFIER IDENTIFIER

  30  read : READ '(' type ',' IDENTIFIER ')'

  31  print : PRINT '(' type ',' IDENTIFIER ')'

  32  max : MAX '(' IDENTIFIER ',' IDENTIFIER ')'

  33  min : MIN '(' IDENTIFIER ',' IDENTIFIER ')'

  34  swap : SWAP '(' IDENTIFIER ',' IDENTIFIER ')'

  35  myfunction : read ';'
  36             | print ';'
  37             | swap ';'

  38  statement : body
  39            | jump_statement
  40            | iteration_statement
  41            | selection_statement
  42            | expression_statement
  43            | declaration
  44            | myfunction

  45  istart : '{'

  46  iend : '}'

  47  iteration_statement : WHILE '(' expression ')' istart statement_list iend
  48                      | FOR '(' expression_statement expression_statement ')' istart statement_list iend
  49                      | FOR '(' expression_statement expression_statement expression ')' istart statement_list iend

  50  selection_statement : IF '(' expression ')' body
  51                      | IF '(' expression ')' body ELSE statement

  52  jump_statement : CONTINUE ';'
  53                 | BREAK ';'
  54                 | RETURN ';'
  55                 | RETURN expression ';'

  56  ass_operator : '='
  57               | MUL_ASSIGN
  58               | DIV_ASSIGN
  59               | MOD_ASSIGN
  60               | ADD_ASSIGN
  61               | SUB_ASSIGN
  62               | LEFT_ASSIGN
  63               | RIGHT_ASSIGN
  64               | AND_ASSIGN
  65               | XOR_ASSIGN
  66               | OR_ASSIGN

  67  expression_statement : ';'
  68                       | expression ';'

  69  arg_list : expression
  70           | arg_list ',' expression

  71  starting : IDENTIFIER
  72           | CONSTANT
  73           | STRING_LITERAL
  74           | '(' expression ')'
  75           | max
  76           | min

  77  main_exp : starting
  78           | IDENTIFIER '[' expression ']'
  79           | IDENTIFIER '[' expression ']' '[' expression ']'
  80           | IDENTIFIER '(' ')'
  81           | IDENTIFIER '(' arg_list ')'
  82           | IDENTIFIER '.' IDENTIFIER
  83           | IDENTIFIER '[' expression ']' '.' IDENTIFIER

  84  unary_op : '+'
  85           | '-'
  86           | '!'
  87           | '~'
  88           | '*'
  89           | '&'

  90  unary_exp : main_exp
  91            | unary_op unary_exp
  92            | SIZEOF '(' type ')'

  93  mul_div_mod : unary_exp
  94              | mul_div_mod '*' unary_exp
  95              | mul_div_mod '/' unary_exp
  96              | mul_div_mod '%' unary_exp

  97  plus_minus : mul_div_mod
  98             | plus_minus '+' mul_div_mod
  99             | plus_minus '-' mul_div_mod

 100  shift : plus_minus
 101        | shift LEFT_OP plus_minus
 102        | shift RIGHT_OP plus_minus

 103  lt_gt_lte_gte : shift
 104                | lt_gt_lte_gte '<' shift
 105                | lt_gt_lte_gte '>' shift
 106                | lt_gt_lte_gte LE_OP shift
 107                | lt_gt_lte_gte GE_OP shift

 108  eq_neq : lt_gt_lte_gte
 109         | eq_neq EQ_OP lt_gt_lte_gte
 110         | eq_neq NE_OP lt_gt_lte_gte

 111  and : eq_neq
 112      | and '&' eq_neq

 113  xor : and
 114      | xor '^' and

 115  or : xor
 116     | or '|' xor

 117  andand : or
 118         | andand AND_OP or

 119  oror : andand
 120       | oror OR_OP andand

 121  conditional_exp : oror

 122  expression : conditional_exp
 123             | unary_exp ass_operator expression

 124  statement_list : statement
 125                 | statement_list statement

 126  openB : '{'

 127  closeB : '}'

 128  body : openB statement_list closeB

 129  function_name : type IDENTIFIER
 130                | STRUCT IDENTIFIER IDENTIFIER
 131                | type '*' IDENTIFIER

 132  function : function_name '(' argument_list ')' body
 133           | function_name '(' ')' body

 134  program : declaration
 135          | function
 136          | program declaration
 137          | program function

state 0
	$accept : . program $end  (0)

	CHAR  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	.  error

	program  goto 5
	type  goto 6
	struct  goto 7
	declaration  goto 8
	function  goto 9
	function_name  goto 10


state 1
	type : CHAR .  (9)

	.  reduce 9


state 2
	type : INT .  (8)

	.  reduce 8


state 3
	type : VOID .  (10)

	.  reduce 10


state 4
	struct : STRUCT . IDENTIFIER '{' struct_list '}'  (22)
	declaration : STRUCT . IDENTIFIER struct_var ';'  (25)
	function_name : STRUCT . IDENTIFIER IDENTIFIER  (130)

	IDENTIFIER  shift 11
	.  error


state 5
	$accept : program . $end  (0)
	program : program . declaration  (136)
	program : program . function  (137)

	$end  accept
	CHAR  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 4
	.  error

	type  goto 6
	struct  goto 7
	declaration  goto 12
	function  goto 13
	function_name  goto 10


state 6
	declaration : type . variables ';'  (23)
	function_name : type . IDENTIFIER  (129)
	function_name : type . '*' IDENTIFIER  (131)

	IDENTIFIER  shift 14
	'*'  shift 15
	.  error

	var  goto 16
	variables  goto 17


state 7
	declaration : struct . ';'  (24)
	declaration : struct . struct_var ';'  (26)

	IDENTIFIER  shift 18
	';'  shift 19
	.  error

	struct_var  goto 20


state 8
	program : declaration .  (134)

	.  reduce 134


state 9
	program : function .  (135)

	.  reduce 135


state 10
	function : function_name . '(' argument_list ')' body  (132)
	function : function_name . '(' ')' body  (133)

	'('  shift 21
	.  error


state 11
	struct : STRUCT IDENTIFIER . '{' struct_list '}'  (22)
	declaration : STRUCT IDENTIFIER . struct_var ';'  (25)
	function_name : STRUCT IDENTIFIER . IDENTIFIER  (130)

	IDENTIFIER  shift 22
	'{'  shift 23
	.  error

	struct_var  goto 24


state 12
	program : program declaration .  (136)

	.  reduce 136


state 13
	program : program function .  (137)

	.  reduce 137


state 14
	var : IDENTIFIER .  (1)
	var : IDENTIFIER . '[' CONSTANT ']'  (2)
	var : IDENTIFIER . '[' CONSTANT ']' '[' CONSTANT ']'  (3)
	function_name : type IDENTIFIER .  (129)

	'['  shift 25
	','  reduce 1
	';'  reduce 1
	'('  reduce 129


state 15
	variables : '*' . var  (5)
	function_name : type '*' . IDENTIFIER  (131)

	IDENTIFIER  shift 26
	.  error

	var  goto 27


state 16
	variables : var .  (4)

	.  reduce 4


state 17
	variables : variables . ',' var  (6)
	variables : variables . ',' '*' var  (7)
	declaration : type variables . ';'  (23)

	','  shift 28
	';'  shift 29
	.  error


state 18
	struct_var : IDENTIFIER .  (13)
	struct_var : IDENTIFIER . '[' CONSTANT ']'  (14)

	'['  shift 30
	','  reduce 13
	';'  reduce 13


state 19
	declaration : struct ';' .  (24)

	.  reduce 24


state 20
	struct_var : struct_var . ',' IDENTIFIER  (15)
	struct_var : struct_var . ',' IDENTIFIER '[' CONSTANT ']'  (16)
	declaration : struct struct_var . ';'  (26)

	','  shift 31
	';'  shift 32
	.  error


state 21
	function : function_name '(' . argument_list ')' body  (132)
	function : function_name '(' . ')' body  (133)

	CHAR  shift 1
	INT  shift 2
	VOID  shift 3
	')'  shift 33
	.  error

	type  goto 34
	argument_list  goto 35


state 22
	struct_var : IDENTIFIER .  (13)
	struct_var : IDENTIFIER . '[' CONSTANT ']'  (14)
	function_name : STRUCT IDENTIFIER IDENTIFIER .  (130)

	'['  shift 30
	','  reduce 13
	';'  reduce 13
	'('  reduce 130


state 23
	struct : STRUCT IDENTIFIER '{' . struct_list '}'  (22)

	CHAR  shift 1
	INT  shift 2
	VOID  shift 3
	.  error

	type  goto 36
	struct_declaration  goto 37
	struct_list  goto 38


state 24
	struct_var : struct_var . ',' IDENTIFIER  (15)
	struct_var : struct_var . ',' IDENTIFIER '[' CONSTANT ']'  (16)
	declaration : STRUCT IDENTIFIER struct_var . ';'  (25)

	','  shift 31
	';'  shift 39
	.  error


state 25
	var : IDENTIFIER '[' . CONSTANT ']'  (2)
	var : IDENTIFIER '[' . CONSTANT ']' '[' CONSTANT ']'  (3)

	CONSTANT  shift 40
	.  error


state 26
	var : IDENTIFIER .  (1)
	var : IDENTIFIER . '[' CONSTANT ']'  (2)
	var : IDENTIFIER . '[' CONSTANT ']' '[' CONSTANT ']'  (3)
	function_name : type '*' IDENTIFIER .  (131)

	'['  shift 25
	','  reduce 1
	';'  reduce 1
	'('  reduce 131


state 27
	variables : '*' var .  (5)

	.  reduce 5


state 28
	variables : variables ',' . var  (6)
	variables : variables ',' . '*' var  (7)

	IDENTIFIER  shift 41
	'*'  shift 42
	.  error

	var  goto 43


state 29
	declaration : type variables ';' .  (23)

	.  reduce 23


state 30
	struct_var : IDENTIFIER '[' . CONSTANT ']'  (14)

	CONSTANT  shift 44
	.  error


state 31
	struct_var : struct_var ',' . IDENTIFIER  (15)
	struct_var : struct_var ',' . IDENTIFIER '[' CONSTANT ']'  (16)

	IDENTIFIER  shift 45
	.  error


state 32
	declaration : struct struct_var ';' .  (26)

	.  reduce 26


state 33
	function : function_name '(' ')' . body  (133)

	'{'  shift 46
	.  error

	body  goto 47
	openB  goto 48


state 34
	argument_list : type . arg_var  (28)

	IDENTIFIER  shift 49
	'*'  shift 50
	.  error

	arg_var  goto 51


state 35
	argument_list : argument_list . ',' type arg_var  (27)
	argument_list : argument_list . ',' STRUCT IDENTIFIER IDENTIFIER  (29)
	function : function_name '(' argument_list . ')' body  (132)

	','  shift 52
	')'  shift 53
	.  error


state 36
	struct_declaration : type . inside_dec ';'  (19)

	IDENTIFIER  shift 54
	.  error

	inside_dec  goto 55


state 37
	struct_list : struct_declaration .  (20)

	.  reduce 20


state 38
	struct_list : struct_list . struct_declaration  (21)
	struct : STRUCT IDENTIFIER '{' struct_list . '}'  (22)

	CHAR  shift 1
	INT  shift 2
	VOID  shift 3
	'}'  shift 56
	.  error

	type  goto 36
	struct_declaration  goto 57


state 39
	declaration : STRUCT IDENTIFIER struct_var ';' .  (25)

	.  reduce 25


state 40
	var : IDENTIFIER '[' CONSTANT . ']'  (2)
	var : IDENTIFIER '[' CONSTANT . ']' '[' CONSTANT ']'  (3)

	']'  shift 58
	.  error


state 41
	var : IDENTIFIER .  (1)
	var : IDENTIFIER . '[' CONSTANT ']'  (2)
	var : IDENTIFIER . '[' CONSTANT ']' '[' CONSTANT ']'  (3)

	'['  shift 25
	','  reduce 1
	';'  reduce 1


state 42
	variables : variables ',' '*' . var  (7)

	IDENTIFIER  shift 41
	.  error

	var  goto 59


state 43
	variables : variables ',' var .  (6)

	.  reduce 6


state 44
	struct_var : IDENTIFIER '[' CONSTANT . ']'  (14)

	']'  shift 60
	.  error


state 45
	struct_var : struct_var ',' IDENTIFIER .  (15)
	struct_var : struct_var ',' IDENTIFIER . '[' CONSTANT ']'  (16)

	'['  shift 61
	','  reduce 15
	';'  reduce 15


state 46
	openB : '{' .  (126)

	.  reduce 126


state 47
	function : function_name '(' ')' body .  (133)

	.  reduce 133


state 48
	body : openB . statement_list closeB  (128)

	IDENTIFIER  shift 62
	CONSTANT  shift 63
	STRING_LITERAL  shift 64
	SIZEOF  shift 65
	IF  shift 66
	WHILE  shift 67
	FOR  shift 68
	CONTINUE  shift 69
	BREAK  shift 70
	RETURN  shift 71
	READ  shift 72
	PRINT  shift 73
	CHAR  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 74
	MIN  shift 75
	MAX  shift 76
	SWAP  shift 77
	'*'  shift 78
	';'  shift 79
	'{'  shift 46
	'('  shift 80
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	'~'  shift 84
	'&'  shift 85
	.  error

	type  goto 86
	struct  goto 7
	declaration  goto 87
	read  goto 88
	print  goto 89
	myfunction  goto 90
	statement  goto 91
	iteration_statement  goto 92
	selection_statement  goto 93
	jump_statement  goto 94
	expression_statement  goto 95
	starting  goto 96
	main_exp  goto 97
	unary_op  goto 98
	unary_exp  goto 99
	mul_div_mod  goto 100
	plus_minus  goto 101
	shift  goto 102
	lt_gt_lte_gte  goto 103
	eq_neq  goto 104
	and  goto 105
	xor  goto 106
	or  goto 107
	andand  goto 108
	oror  goto 109
	conditional_exp  goto 110
	expression  goto 111
	statement_list  goto 112
	body  goto 113
	openB  goto 48
	max  goto 114
	min  goto 115
	swap  goto 116


state 49
	arg_var : IDENTIFIER .  (11)

	.  reduce 11


state 50
	arg_var : '*' . IDENTIFIER  (12)

	IDENTIFIER  shift 117
	.  error


state 51
	argument_list : type arg_var .  (28)

	.  reduce 28


state 52
	argument_list : argument_list ',' . type arg_var  (27)
	argument_list : argument_list ',' . STRUCT IDENTIFIER IDENTIFIER  (29)

	CHAR  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 118
	.  error

	type  goto 119


state 53
	function : function_name '(' argument_list ')' . body  (132)

	'{'  shift 46
	.  error

	body  goto 120
	openB  goto 48


state 54
	inside_dec : IDENTIFIER .  (17)

	.  reduce 17


state 55
	inside_dec : inside_dec . ',' IDENTIFIER  (18)
	struct_declaration : type inside_dec . ';'  (19)

	','  shift 121
	';'  shift 122
	.  error


state 56
	struct : STRUCT IDENTIFIER '{' struct_list '}' .  (22)

	.  reduce 22


state 57
	struct_list : struct_list struct_declaration .  (21)

	.  reduce 21


state 58
	var : IDENTIFIER '[' CONSTANT ']' .  (2)
	var : IDENTIFIER '[' CONSTANT ']' . '[' CONSTANT ']'  (3)

	'['  shift 123
	','  reduce 2
	';'  reduce 2


state 59
	variables : variables ',' '*' var .  (7)

	.  reduce 7


state 60
	struct_var : IDENTIFIER '[' CONSTANT ']' .  (14)

	.  reduce 14


state 61
	struct_var : struct_var ',' IDENTIFIER '[' . CONSTANT ']'  (16)

	CONSTANT  shift 124
	.  error


state 62
	starting : IDENTIFIER .  (71)
	main_exp : IDENTIFIER . '[' expression ']'  (78)
	main_exp : IDENTIFIER . '[' expression ']' '[' expression ']'  (79)
	main_exp : IDENTIFIER . '(' ')'  (80)
	main_exp : IDENTIFIER . '(' arg_list ')'  (81)
	main_exp : IDENTIFIER . '.' IDENTIFIER  (82)
	main_exp : IDENTIFIER . '[' expression ']' '.' IDENTIFIER  (83)

	'['  shift 125
	'('  shift 126
	'.'  shift 127
	LEFT_OP  reduce 71
	RIGHT_OP  reduce 71
	LE_OP  reduce 71
	GE_OP  reduce 71
	EQ_OP  reduce 71
	NE_OP  reduce 71
	AND_OP  reduce 71
	OR_OP  reduce 71
	MUL_ASSIGN  reduce 71
	DIV_ASSIGN  reduce 71
	MOD_ASSIGN  reduce 71
	ADD_ASSIGN  reduce 71
	SUB_ASSIGN  reduce 71
	LEFT_ASSIGN  reduce 71
	RIGHT_ASSIGN  reduce 71
	AND_ASSIGN  reduce 71
	XOR_ASSIGN  reduce 71
	OR_ASSIGN  reduce 71
	']'  reduce 71
	'*'  reduce 71
	','  reduce 71
	';'  reduce 71
	')'  reduce 71
	'='  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	'&'  reduce 71
	'/'  reduce 71
	'%'  reduce 71
	'<'  reduce 71
	'>'  reduce 71
	'^'  reduce 71
	'|'  reduce 71


state 63
	starting : CONSTANT .  (72)

	.  reduce 72


state 64
	starting : STRING_LITERAL .  (73)

	.  reduce 73


state 65
	unary_exp : SIZEOF . '(' type ')'  (92)

	'('  shift 128
	.  error


state 66
	selection_statement : IF . '(' expression ')' body  (50)
	selection_statement : IF . '(' expression ')' body ELSE statement  (51)

	'('  shift 129
	.  error


state 67
	iteration_statement : WHILE . '(' expression ')' istart statement_list iend  (47)

	'('  shift 130
	.  error


state 68
	iteration_statement : FOR . '(' expression_statement expression_statement ')' istart statement_list iend  (48)
	iteration_statement : FOR . '(' expression_statement expression_statement expression ')' istart statement_list iend  (49)

	'('  shift 131
	.  error


state 69
	jump_statement : CONTINUE . ';'  (52)

	';'  shift 132
	.  error


state 70
	jump_statement : BREAK . ';'  (53)

	';'  shift 133
	.  error


state 71
	jump_statement : RETURN . ';'  (54)
	jump_statement : RETURN . expression ';'  (55)

	IDENTIFIER  shift 62
	CONSTANT  shift 63
	STRING_LITERAL  shift 64
	SIZEOF  shift 65
	MIN  shift 75
	MAX  shift 76
	'*'  shift 78
	';'  shift 134
	'('  shift 80
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	'~'  shift 84
	'&'  shift 85
	.  error

	starting  goto 96
	main_exp  goto 97
	unary_op  goto 98
	unary_exp  goto 99
	mul_div_mod  goto 100
	plus_minus  goto 101
	shift  goto 102
	lt_gt_lte_gte  goto 103
	eq_neq  goto 104
	and  goto 105
	xor  goto 106
	or  goto 107
	andand  goto 108
	oror  goto 109
	conditional_exp  goto 110
	expression  goto 135
	max  goto 114
	min  goto 115


state 72
	read : READ . '(' type ',' IDENTIFIER ')'  (30)

	'('  shift 136
	.  error


state 73
	print : PRINT . '(' type ',' IDENTIFIER ')'  (31)

	'('  shift 137
	.  error


state 74
	struct : STRUCT . IDENTIFIER '{' struct_list '}'  (22)
	declaration : STRUCT . IDENTIFIER struct_var ';'  (25)

	IDENTIFIER  shift 138
	.  error


state 75
	min : MIN . '(' IDENTIFIER ',' IDENTIFIER ')'  (33)

	'('  shift 139
	.  error


state 76
	max : MAX . '(' IDENTIFIER ',' IDENTIFIER ')'  (32)

	'('  shift 140
	.  error


state 77
	swap : SWAP . '(' IDENTIFIER ',' IDENTIFIER ')'  (34)

	'('  shift 141
	.  error


state 78
	unary_op : '*' .  (88)

	.  reduce 88


state 79
	expression_statement : ';' .  (67)

	.  reduce 67


state 80
	starting : '(' . expression ')'  (74)

	IDENTIFIER  shift 62
	CONSTANT  shift 63
	STRING_LITERAL  shift 64
	SIZEOF  shift 65
	MIN  shift 75
	MAX  shift 76
	'*'  shift 78
	'('  shift 80
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	'~'  shift 84
	'&'  shift 85
	.  error

	starting  goto 96
	main_exp  goto 97
	unary_op  goto 98
	unary_exp  goto 99
	mul_div_mod  goto 100
	plus_minus  goto 101
	shift  goto 102
	lt_gt_lte_gte  goto 103
	eq_neq  goto 104
	and  goto 105
	xor  goto 106
	or  goto 107
	andand  goto 108
	oror  goto 109
	conditional_exp  goto 110
	expression  goto 142
	max  goto 114
	min  goto 115


state 81
	unary_op : '+' .  (84)

	.  reduce 84


state 82
	unary_op : '-' .  (85)

	.  reduce 85


state 83
	unary_op : '!' .  (86)

	.  reduce 86


state 84
	unary_op : '~' .  (87)

	.  reduce 87


state 85
	unary_op : '&' .  (89)

	.  reduce 89


state 86
	declaration : type . variables ';'  (23)

	IDENTIFIER  shift 41
	'*'  shift 143
	.  error

	var  goto 16
	variables  goto 17


state 87
	statement : declaration .  (43)

	.  reduce 43


state 88
	myfunction : read . ';'  (35)

	';'  shift 144
	.  error


state 89
	myfunction : print . ';'  (36)

	';'  shift 145
	.  error


state 90
	statement : myfunction .  (44)

	.  reduce 44


state 91
	statement_list : statement .  (124)

	.  reduce 124


state 92
	statement : iteration_statement .  (40)

	.  reduce 40


state 93
	statement : selection_statement .  (41)

	.  reduce 41


state 94
	statement : jump_statement .  (39)

	.  reduce 39


state 95
	statement : expression_statement .  (42)

	.  reduce 42


state 96
	main_exp : starting .  (77)

	.  reduce 77


state 97
	unary_exp : main_exp .  (90)

	.  reduce 90


state 98
	unary_exp : unary_op . unary_exp  (91)

	IDENTIFIER  shift 62
	CONSTANT  shift 63
	STRING_LITERAL  shift 64
	SIZEOF  shift 65
	MIN  shift 75
	MAX  shift 76
	'*'  shift 78
	'('  shift 80
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	'~'  shift 84
	'&'  shift 85
	.  error

	starting  goto 96
	main_exp  goto 97
	unary_op  goto 98
	unary_exp  goto 146
	max  goto 114
	min  goto 115


state 99
	mul_div_mod : unary_exp .  (93)
	expression : unary_exp . ass_operator expression  (123)

	MUL_ASSIGN  shift 147
	DIV_ASSIGN  shift 148
	MOD_ASSIGN  shift 149
	ADD_ASSIGN  shift 150
	SUB_ASSIGN  shift 151
	LEFT_ASSIGN  shift 152
	RIGHT_ASSIGN  shift 153
	AND_ASSIGN  shift 154
	XOR_ASSIGN  shift 155
	OR_ASSIGN  shift 156
	'='  shift 157
	LEFT_OP  reduce 93
	RIGHT_OP  reduce 93
	LE_OP  reduce 93
	GE_OP  reduce 93
	EQ_OP  reduce 93
	NE_OP  reduce 93
	AND_OP  reduce 93
	OR_OP  reduce 93
	']'  reduce 93
	'*'  reduce 93
	','  reduce 93
	';'  reduce 93
	')'  reduce 93
	'+'  reduce 93
	'-'  reduce 93
	'&'  reduce 93
	'/'  reduce 93
	'%'  reduce 93
	'<'  reduce 93
	'>'  reduce 93
	'^'  reduce 93
	'|'  reduce 93

	ass_operator  goto 158


state 100
	mul_div_mod : mul_div_mod . '*' unary_exp  (94)
	mul_div_mod : mul_div_mod . '/' unary_exp  (95)
	mul_div_mod : mul_div_mod . '%' unary_exp  (96)
	plus_minus : mul_div_mod .  (97)

	'*'  shift 159
	'/'  shift 160
	'%'  shift 161
	LEFT_OP  reduce 97
	RIGHT_OP  reduce 97
	LE_OP  reduce 97
	GE_OP  reduce 97
	EQ_OP  reduce 97
	NE_OP  reduce 97
	AND_OP  reduce 97
	OR_OP  reduce 97
	']'  reduce 97
	','  reduce 97
	';'  reduce 97
	')'  reduce 97
	'+'  reduce 97
	'-'  reduce 97
	'&'  reduce 97
	'<'  reduce 97
	'>'  reduce 97
	'^'  reduce 97
	'|'  reduce 97


state 101
	plus_minus : plus_minus . '+' mul_div_mod  (98)
	plus_minus : plus_minus . '-' mul_div_mod  (99)
	shift : plus_minus .  (100)

	'+'  shift 162
	'-'  shift 163
	LEFT_OP  reduce 100
	RIGHT_OP  reduce 100
	LE_OP  reduce 100
	GE_OP  reduce 100
	EQ_OP  reduce 100
	NE_OP  reduce 100
	AND_OP  reduce 100
	OR_OP  reduce 100
	']'  reduce 100
	','  reduce 100
	';'  reduce 100
	')'  reduce 100
	'&'  reduce 100
	'<'  reduce 100
	'>'  reduce 100
	'^'  reduce 100
	'|'  reduce 100


state 102
	shift : shift . LEFT_OP plus_minus  (101)
	shift : shift . RIGHT_OP plus_minus  (102)
	lt_gt_lte_gte : shift .  (103)

	LEFT_OP  shift 164
	RIGHT_OP  shift 165
	LE_OP  reduce 103
	GE_OP  reduce 103
	EQ_OP  reduce 103
	NE_OP  reduce 103
	AND_OP  reduce 103
	OR_OP  reduce 103
	']'  reduce 103
	','  reduce 103
	';'  reduce 103
	')'  reduce 103
	'&'  reduce 103
	'<'  reduce 103
	'>'  reduce 103
	'^'  reduce 103
	'|'  reduce 103


state 103
	lt_gt_lte_gte : lt_gt_lte_gte . '<' shift  (104)
	lt_gt_lte_gte : lt_gt_lte_gte . '>' shift  (105)
	lt_gt_lte_gte : lt_gt_lte_gte . LE_OP shift  (106)
	lt_gt_lte_gte : lt_gt_lte_gte . GE_OP shift  (107)
	eq_neq : lt_gt_lte_gte .  (108)

	LE_OP  shift 166
	GE_OP  shift 167
	'<'  shift 168
	'>'  shift 169
	EQ_OP  reduce 108
	NE_OP  reduce 108
	AND_OP  reduce 108
	OR_OP  reduce 108
	']'  reduce 108
	','  reduce 108
	';'  reduce 108
	')'  reduce 108
	'&'  reduce 108
	'^'  reduce 108
	'|'  reduce 108


state 104
	eq_neq : eq_neq . EQ_OP lt_gt_lte_gte  (109)
	eq_neq : eq_neq . NE_OP lt_gt_lte_gte  (110)
	and : eq_neq .  (111)

	EQ_OP  shift 170
	NE_OP  shift 171
	AND_OP  reduce 111
	OR_OP  reduce 111
	']'  reduce 111
	','  reduce 111
	';'  reduce 111
	')'  reduce 111
	'&'  reduce 111
	'^'  reduce 111
	'|'  reduce 111


state 105
	and : and . '&' eq_neq  (112)
	xor : and .  (113)

	'&'  shift 172
	AND_OP  reduce 113
	OR_OP  reduce 113
	']'  reduce 113
	','  reduce 113
	';'  reduce 113
	')'  reduce 113
	'^'  reduce 113
	'|'  reduce 113


state 106
	xor : xor . '^' and  (114)
	or : xor .  (115)

	'^'  shift 173
	AND_OP  reduce 115
	OR_OP  reduce 115
	']'  reduce 115
	','  reduce 115
	';'  reduce 115
	')'  reduce 115
	'|'  reduce 115


state 107
	or : or . '|' xor  (116)
	andand : or .  (117)

	'|'  shift 174
	AND_OP  reduce 117
	OR_OP  reduce 117
	']'  reduce 117
	','  reduce 117
	';'  reduce 117
	')'  reduce 117


state 108
	andand : andand . AND_OP or  (118)
	oror : andand .  (119)

	AND_OP  shift 175
	OR_OP  reduce 119
	']'  reduce 119
	','  reduce 119
	';'  reduce 119
	')'  reduce 119


state 109
	oror : oror . OR_OP andand  (120)
	conditional_exp : oror .  (121)

	OR_OP  shift 176
	']'  reduce 121
	','  reduce 121
	';'  reduce 121
	')'  reduce 121


state 110
	expression : conditional_exp .  (122)

	.  reduce 122


state 111
	expression_statement : expression . ';'  (68)

	';'  shift 177
	.  error


state 112
	statement_list : statement_list . statement  (125)
	body : openB statement_list . closeB  (128)

	IDENTIFIER  shift 62
	CONSTANT  shift 63
	STRING_LITERAL  shift 64
	SIZEOF  shift 65
	IF  shift 66
	WHILE  shift 67
	FOR  shift 68
	CONTINUE  shift 69
	BREAK  shift 70
	RETURN  shift 71
	READ  shift 72
	PRINT  shift 73
	CHAR  shift 1
	INT  shift 2
	VOID  shift 3
	STRUCT  shift 74
	MIN  shift 75
	MAX  shift 76
	SWAP  shift 77
	'*'  shift 78
	';'  shift 79
	'{'  shift 46
	'}'  shift 178
	'('  shift 80
	'+'  shift 81
	'-'  shift 82
	'!'  shift 83
	'~'  shift 84
	'&'  shift 85
	.  error

	type  goto 86
	struct  goto 7
	declaration  goto 87
	read  goto 88
	print  goto 89
	myfunction  goto 90
	statement  goto 179
	iteration_statement  goto 92
	selection_statement  goto 93
	jump_statement  goto 94
	expression_statement  goto 95
	starting  goto 96
	main_exp  goto 97
	unary_op  goto 98
	unary_exp  goto 99
	mul_div_mod  goto 100
	plus_minus  goto 101
	shift  goto 102
	lt_gt_lte_gte  goto 103
	eq_neq  goto 104
	and  goto 105
	xor  goto 106
	or  goto 107
	andand  goto 108
	oror  goto 109
	conditional_exp  goto 110
	expression  goto 111
	body  goto 113
	openB  goto 48
	closeB  goto 180
	max  goto 114
	min  goto 115
	swap  goto 116


state 113
	statement : body .  (38)

	.  reduce 38


state 114
	starting : max .  (75)

	.  reduce 75


state 115
	starting : min .  (76)

	.  reduce 76


state 116
	myfunction : swap . ';'  (37)

	';'  shift 181
	.  error


state 117
	arg_var : '*' IDENTIFIER .  (12)

	.  reduce 12


state 118
	argument_list : argument_list ',' STRUCT . IDENTIFIER IDENTIFIER  (29)

	IDENTIFIER  shift 182
	.  error


state 119
	argument_list : argument_list ',' type . arg_var  (27)

	IDENTIFIER  shift 49
	'*'  shift 50
	.  error

	arg_var  goto 183


state 120
	function : function_name '(' argument_list ')' body .  (132)

	.  reduce 132


state 121
	inside_dec : inside_dec ',' . IDENTIFIER  (18)

	IDENTIFIER  shift 184
	.  error


state 122
	struct_declaration : type inside_dec ';' .  (19)

	.  reduce 19


state 123
	var : IDENTIFIER '[' CONSTANT ']' '[' . CONSTANT ']'  (3)

	CONSTANT  shift 185
	.  error


state 124
	struct_var : struct_var ',' IDENTIFIER '[' CONSTANT . ']'  (16)

	']'  shift 186
	.  error


state 125
	main_exp : IDENTIFIER '[' . expression ']'  (78)
	main_exp : IDENTIFIER '[' . expression ']' '[' expression ']'  (79)
	main_exp : IDENTIFIER '[' . expression ']' '.' IDENTIFIER  (83)
